--- a/api/gunicorn.conf
+++ b/api/gunicorn.conf
@@ -2,11 +2,11 @@ import multiprocessing
 
 workers = 2
 
-bind = "localhost:7788"
+bind = "localhost:8788"
 backlog = 2048
 timeout = 3600
 worker_class="gevent"
 debug=True
 
-proc_name='tranweb_API.pid'
-pidfile = '/tmp/tranweb_API.pid'
+proc_name='trangroup_API.pid'
+pidfile = '/tmp/trangroup_API.pid'
