--- a/web/gunicorn.conf
+++ b/web/gunicorn.conf
@@ -2,12 +2,12 @@ import multiprocessing
 
 workers = 2
 
-bind = "gene.ac:3344"
+bind = "gene.ac:4344"
 backlog = 2048
 timeout = 3600
 worker_class="gevent"
 debug=True
 threads = 2
 
-proc_name='tranweb_WebStart.pid'
-pidfile = '/tmp/tranweb_WebStart.pid'
+proc_name='trangroup_WebStart.pid'
+pidfile = '/tmp/trangroup_WebStart.pid'
